--- a/sequence.html
+++ b/sequence.html
@@ -701,37 +701,37 @@
             </table>
         </div>
 
-        <!-- Bottom Row -->
-        <div class="row">
-            <!-- the left column for the discard area -->
-            <div class="col-md-2">
-                <h3>Discard</h3>
-                <div id="area_discard"><img id="discard" src="assets/svg/discard.svg" height="100%" width="100%" draggable="false"></div>
-            </div>
-
-            <!-- the center column for the hand -->
-            <div class="col-md-8">
-                <h3 style="text-align:center">Your Cards</h3>
-                <table class="area_hand">
-                    <tr>
-                        <td id="hand1">card 1</td>
-                        <td id="hand2">card 2</td>
-                        <td id="hand3">card 3</td>
-                        <td id="hand4">card 4</td>
-                        <td id="hand5">card 5</td>
-                        <td id="hand6">card 6</td>
-                        <td id="hand7">card 7 (optional)</td>
-                    </tr>
-                </table>
-            </div>
-
-            <!-- the right column for the deck -->
-            <div class="col-md-2">
-                <h3>Deck</h3>
-            </div>
-        </div>
-
         <footer>
+                    <!-- Bottom Row -->
+            <div class="row">
+                <!-- the left column for the discard area -->
+                <div class="col-md-2 leftAlign">
+                    <h3>Discard</h3>
+                    <div id="area_discard"><img id="discard" src="assets/svg/discard.svg" height="100%" width="100%" draggable="false"></div>
+                </div>
+
+                <!-- the center column for the hand -->
+                <div class="col-md-8 centerAlign">
+                    <h3 style="text-align:center">Your Cards</h3>
+                    <table class="area_hand">
+                        <tr>
+                            <td id="hand1">card 1</td>
+                            <td id="hand2">card 2</td>
+                            <td id="hand3">card 3</td>
+                            <td id="hand4">card 4</td>
+                            <td id="hand5">card 5</td>
+                            <td id="hand6">card 6</td>
+                            <td id="hand7">card 7 (optional)</td>
+                        </tr>
+                    </table>
+                </div>
+
+                <!-- the right column for the deck -->
+                <div class="col-md-2 rightAlign">
+                    <h3>Deck</h3>
+                </div>
+            </div>
+        
             <p><i>CSULB Senior Project by Thomas, Michael, Wilburn</i></p>
         </footer>
 
