--- a/sequence.html
+++ b/sequence.html
@@ -23,7 +23,46 @@
 
 <body>
     <div class="container">
+        <!-- Modal -->
+        <div class="modal fade" id="myModal2" role="dialog" tabindex="-1" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <h2>OBJECTIVE OF THE GAME:</h2>
+                        <p>Connect a series of five of the same colour chip either horizontally, vertically, or diagonally on the board.</p>
+                        <p>NOTE: The corners of the board are wild and players can use it towards their sequence.</p>
+                        <p>For 2 teams: Score 2 sequences before your opponents.<br>For 3 teams: Score 1 sequence before your opponents.</p>
+                        <h2>RULES:</h2>
+                        <h3>Set-up</h3>
+                        <p>The board contains 2 copies of each playing card. Jacks are special cards and do not appear on the board. Click and drag a card from your hand to an available spot on the board to play it.</p>
+                        <h3>The Jacks</h3>
+                        <p>There are 8 Jacks in the card deck. The 4 Jacks with TWO EYES are wild, meaning place a token at any open location. The 4 jacks with ONE EYE are remove, meaning to remove any token from the board as long as it's not part of a completed sequence</p>
+                        <h3>Dead Card</h3>
+                        <p>If you hold a card in your hand with no available space, you may replace the card for a new one and proceed with your turn as normal.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+        <div class="modal fade" id="endModal" role="dialog" tabindex="-1" aria-labelledby="endModal-label" style="text-align:center">
+            <div class="modal-dialog modal-sm" role="document">
+                <div class="modal-content">
+                    <div class="modal-title" id="endModal-label">
+                        <h1>You won!</h1>
+                    </div>
+                    <div class="modal-body">
+                        <p><a class="btn btn-lg btn-success" href="sequence.html" role="button">Replay</a></p>
+                        <p><a class="btn btn-lg btn-success" href="index.html" role="button">Home</a></p>
+                    </div>
+                    <div class="modal-footer">
+                    </div>
+                </div>
+            </div>
+        </div>
+    
         <header>
             <!-- Header Row -->
             <div class="row">
@@ -41,47 +80,8 @@
                     <h1 id="playersTurn" style="text-align:center">Players Turn</h1>
                 </div>
 
-                <div class="container" style="text-align:center; padding:20px">
+                <div class="popup" style="text-align:center; padding:20px">
                     <button type="button" vspace ="20" style="float:right" class="btn btn-lg btn-success" data-toggle="modal" data-target="#myModal2" id="Rules">Rules</button>
-                    <!-- Modal -->
-                    <div class="modal fade" id="myModal2" role="dialog" tabindex="-1" aria-labelledby="myModalLabel">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-body">
-                                    <h2>OBJECTIVE OF THE GAME:</h2>
-                                    <p>Connect a series of five of the same colour chip either horizontally, vertically, or diagonally on the board.</p>
-                                    <p>NOTE: The corners of the board are wild and players can use it towards their sequence.</p>
-                                    <p>For 2 teams: Score 2 sequences before your opponents.<br>For 3 teams: Score 1 sequence before your opponents.</p>
-                                    <h2>RULES:</h2>
-                                    <h3>Set-up</h3>
-                                    <p>The board contains 2 copies of each playing card. Jacks are special cards and do not appear on the board. Click and drag a card from your hand to an available spot on the board to play it.</p>
-                                    <h3>The Jacks</h3>
-                                    <p>There are 8 Jacks in the card deck. The 4 Jacks with TWO EYES are wild, meaning place a token at any open location. The 4 jacks with ONE EYE are remove, meaning to remove any token from the board as long as it's not part of a completed sequence</p>
-                                    <h3>Dead Card</h3>
-                                    <p>If you hold a card in your hand with no available space, you may replace the card for a new one and proceed with your turn as normal.</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="modal fade" id="endModal" role="dialog" tabindex="-1" aria-labelledby="endModal-label" style="text-align:center">
-                    <div class="modal-dialog modal-sm" role="document">
-                        <div class="modal-content">
-                            <div class="modal-title" id="endModal-label">
-                                <h1>You won!</h1>
-                            </div>
-                            <div class="modal-body">
-                                <p><a class="btn btn-lg btn-success" href="sequence.html" role="button">Replay</a></p>
-                                <p><a class="btn btn-lg btn-success" href="index.html" role="button">Home</a></p>
-                            </div>
-                            <div class="modal-footer">
-                            </div>
-                        </div>
-                    </div>
                 </div>
 
             </div>
@@ -702,7 +702,7 @@
         </div>
 
         <footer>
-                    <!-- Bottom Row -->
+            <!-- Bottom Row -->
             <div class="row">
                 <!-- the left column for the discard area -->
                 <div class="col-md-2 leftAlign">
