--- a/sequence.html
+++ b/sequence.html
@@ -1521,7 +1521,7 @@
         var compPlayedACard = false;
         var tries = 0;
         do {
-            compPlayedACard = computerObject.playCard();
+            compPlayedACard = computerObject.playAgroCard();
             if (compPlayedACard)
                 break;
             //comp couldnt play a card
