Misspelled arayID for discardDrop

--- a/sequence.html
+++ b/sequence.html
@@ -994,7 +994,7 @@
                 showDiscardCard();
                 showDiscardCard();
                 arrayID = i + 1;
-                drawCard(arayID, ui);
+                drawCard(arrayID, ui);
             }
             else
                 tempArray.push(playerHand[i]);
