Lower case a console print

--- a/sequence.html
+++ b/sequence.html
@@ -1588,7 +1588,7 @@
             //discard a card
             var discardOkay = computerObject.discardCard();
             if (!discardOkay)
-                Console.log("discarding problem occured");
+                console.log("discarding problem occured");
             tries++;
         } while (tries < 2);
 
